# BlockBuster

./: .gitmodules  Dockerfile  README.md  entrypoint.sh  robot_start.sh  simu_start.sh  start_mission.sh
.github/workflows/: docker-ci.yml
articubot_one/config/: keyboard.yaml  main.rviz  mapper_params_online_async.yaml  twist_mux.yaml
articubot_one/launch/: launch_sim.launch.py
bb_state_machine/: package.xml  setup.cfg  setup.py
bb_state_machine/bb_state_machine/: base_state.py  bb_state_machine_node.py  missions.py  robot_state_machine.py  shared_data.py  state_auto_nav_a.py  state_auto_nav_t.py  state_front_clearing.py  state_man_nav.py  state_slope_climbing.py  states.py  super_sate.py  tools.py  utils.py
bb_state_machine/config/: m1_goto_z3.csv  m1_homing.csv  m1_nav_a_0.csv  m1_nav_m_0.csv  m1_nav_t_0.csv  m1_push_button.csv  m1_search_z3.csv  m1_unloading.csv  m2_approach_slope_high.csv  m2_approach_slope_low.csv  m2_goto_slope_high.csv  m2_goto_z4.csv  m2_homing.csv  m2_leave_slope_high.csv  m2_leave_slope_low.csv  m2_nav_a_0.csv  m2_nav_t_0.csv  m2_search_z4.csv  m2_unloading.csv  test.csv  test_auto_nav_a.csv  test_auto_nav_t.csv  test_man_nav.csv
bb_state_machine/launch/: bb_state_machine.launch.py
blockbuster_core/: CMakeLists.txt  package.xml
blockbuster_core/config/: bt.xml  joystick.yaml  main.rviz  my_controllers.yaml  nav2_params.yaml  nav2_params_sim.yaml  twist_mux.yaml
blockbuster_core/description/: base_macro.urdf.xacro  depthai_macro.urdf.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  urdf_blockbuster.gazebo  urdf_blockbuster.xacro
blockbuster_core/launch/: ball_tracker.launch.py  costmap_filter_info.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
blockbuster_core/maps/: map_arena_gz.pgm  map_arena_gz.yaml  map_arena_keepout_gz.pgm  map_arena_keepout_gz.yaml  map_arena_l0.pgm  map_arena_l0.yaml  map_arena_l0_keepout.pgm  map_arena_l0_keepout.yaml  map_arena_l1.pgm  map_arena_l1.yaml  map_arena_test.pgm  map_arena_test.yaml  map_arena_test_keepout.pgm  map_arena_test_keepout.yaml  map_lr.pgm  map_lr.yaml  map_lr_gz.pgm  map_lr_gz.yaml
blockbuster_core/meshes/: Cam_1.stl  Cam_Window_v1_1.stl  Left_Caster_Wheel_1.stl  Right_Caster_Wheel_1.stl  Stereo_Cam_v1_1.stl  Storage_1.stl  base_link.stl
blockbuster_core/worlds/: arena.world  living_room.world
blockbuster_sm/: package.xml  setup.cfg  setup.py
blockbuster_sm/blockbuster_sm/: base_state.py  blockbuster_sm_node.py  missions.py  robot_state_machine.py  shared_data.py  state_auto_nav_a.py  state_auto_nav_t.py  state_man_nav.py  state_slope_climbing.py  state_slope_nav.py  super_sate.py  utils.py
blockbuster_sm/launch/: blockbuster_sm.launch.py
oakd_cam/: CMakeLists.txt  package.xml
oakd_cam/config/: imu_filter.yaml
oakd_cam/launch/: imu_filter.launch.py  new_oakd_imu.launch.py  stereo.launch.py  yolov6_publisher.launch.py
oakd_cam/src/: image_overlay_node.cpp  new_oakd_imu.cpp  yolov6_spatial_publisher.cpp
(+43 files in other folders)
